# simulated_tem

./: .gitignore  CMakeLists.txt  LICENSE  README  README.md
Data/: test.i111_loop_W.lammps
Data/Potentials/: EAM_EAM2_W.xml  EAM_MNB_W.xml  EAM_MNL_W_H.xml  MNL_W_H.eam.alloy
DynamicalTwoBeam/: CMakeLists.txt  run.FeBcc.sh  run.sh  testAG  testAG.fit  tmp
DynamicalTwoBeam/Infile/: infile.fit.in  infile.fitREAL.in  infile.fitTDS.in  infile.inputREAL.in  inputTDS.tmp
DynamicalTwoBeam/doc/: hcp_permitted_reflections.xlsx
DynamicalTwoBeam/original/: programs.tar
DynamicalTwoBeam/original/USERFRIENDLY/: REALfit.f  TDSfit.f  inputREAL.f  inputTDS.f  testAg  testCu  testW
DynamicalTwoBeam/src/: CMakeLists.txt  DebyeWallerFactor.f90  DoyleTurnerCoefficients.h  Lib_CrystalStructureFactor.f90  Lib_Elements.f90  Lib_Lattices.f90  Lib_REALfit.f90  Lib_RelativisticElectrons.f90  Lib_SimpleProgressBar.f90  Lib_inputREAL.f90  Lib_inputTDS.f90  Makefile  Makefile.inc  REALfit.f  REALfit.f90  TDSfit.f  crystalStructureFactor.f90  inputREAL.f  inputTDS.f
DynamicalTwoBeam/src/Junk/: Lib_DoyleTurnerCoefficients.f90
DynamicalTwoBeam/test/: CMakeLists.txt  testLib_Callipers.f90  test_Lib_Elements.f90  test_Lib_InputTDS.f90  test_Lib_REALfit.f90  test_Lib_inputReal.f90
many_beam/: CMakeLists.txt
many_beam/data/: perfect_W_16x16x16.xyz  perfect_W_8x8x8.xyz
many_beam/src/: CMakeLists.txt  Lib_AtomSpace.f90  Lib_Callipers.f90  Lib_ColourScale.f90  Lib_ColouredTerminal.f90  Lib_CommandLineArguments.f90  Lib_ComputePhaseFactor.f90  Lib_CrystalStructureFactor.f90  Lib_Elements.f90  Lib_FactoriseParallel.f90  Lib_FibonacciSphere.f90  Lib_Filenames.f90  Lib_FitDoyleTurner.f90  Lib_GoldenSection.f90  Lib_Greyscale.c  Lib_Gvectors copy.f90  Lib_Gvectors.f90  Lib_ImagingSpace.F90  Lib_IntegrateManyBeams.f90  Lib_Lattices.f90  Lib_Lattices_old.f90  Lib_Linint.f90  Lib_ManyBeam.f90  Lib_Png.f90  Lib_Quaternions.f90  Lib_REALfit.f90  Lib_RK4.f90  Lib_RandomSeed.f90  Lib_ReadExtinctionDistances.f90  Lib_RelativisticElectrons.f90  Lib_RotationMatrices.f90  Lib_TDSfit.f90  Lib_XYZFiles.f90  Lib_XYZFiles32.f90  Lib_inputREAL.f90  Lib_inputTDS.f90  NBAX3.f90  NBAX_StringTokenizers.f90  REALfit.f90  absorbativeScatteringFactors.h  (+3 more)
many_beam/test/: CMakeLists.txt  FE.h  FE_imag.h  simple_triple_occupancy_trap.xml  testLib_CommandLineArguments.f90  testLib_DeformationGradients.f90  testLib_Lattices.f90  testLib_Quaternions.f90  testLib_RotationMatrices.f90  test_Lib_AtomSpace.f90  test_Lib_ComputePhaseFactor.f90  test_Lib_CrystalStructureFactor.f90  test_Lib_Elements.f90  test_Lib_FibonacciSphere.f90  test_Lib_Gvectors.f90  test_Lib_ImagingSpace.F90  test_Lib_InputTDS.f90  test_Lib_IntegrateManyBeams.f90  test_Lib_REALfit.f90  test_Lib_TDSfit.f90  test_Lib_inputReal.f90
src/: CMakeLists.txt  EAM_PotentialTables.f90  GrainNodes.f90  Lib_ClosestVector.f90  Lib_ColouredTerminal.f90  Lib_CommandLineArguments.f90  Lib_ComplexSupercells.f90  Lib_ConjugateGradient.f90  Lib_DataDoubler.f90  Lib_DeformationGradients.f90  Lib_DeformationMatrixToStrainRotation.f90  Lib_DiffractionConditions.f90  Lib_DiffractionSpot.f90  Lib_DiffractionSpot.omp.f90  Lib_DistancePointToTriangle.f90  Lib_DynamicalTwoBeamImaging.f90  Lib_EvenlySpacedPointsInCircle.f90  Lib_Exteriors.f90  Lib_FFTW3f.f90  Lib_FFTW3f_32.f90  Lib_Filenames.f90  Lib_FindLocalStrains.f90  Lib_FitTanhFunction.f90  Lib_GaussianBlurs.f90  Lib_GoldenSection.f90  Lib_Graphs.f90  Lib_Greyscale.c  Lib_Greyscale_f.f90  Lib_ImageCorrelationFunction.f90  Lib_LinkCell3D.f90  Lib_LocalFilter2d.f90  Lib_LowPassFilter3d.f90  Lib_MarchingCubes.f90  Lib_MarchingSquares.f90  Lib_MaxLikelihoodFilter.f90  Lib_MitchellsBestCandidate.f90  Lib_Perlin.f90  Lib_Quaternions.f90  Lib_Quicksort.f90  Lib_QuinticSplinesEven2.f90  (+40 more)
test/: CMakeLists.txt  testD2BI.sh  testFitDeformationGradient.f90  testLib_ComplexSupercells.f90  testLib_Filenames.f90  testLib_GoldenSection.f90  testLib_Graphs.f90  testLib_LinkCell3D.f90  testLib_Quicksort.f90  testLib_RelativisticElectrons.f90  testLib_SimpleProgressBar.f90  testLib_SimpleSupercells.f90  testLib_TopologicallyCorrectClustering.f90  testNBAX_StringTokenizers.f90  testPng.f90  testVoids.sh
test/Junk/: testClosestVector.f90  testCubicDistance.f90  testLib_DistancePointToTriangle.f90  testLib_FitTanhFunction.f90  testLib_Voxelise.f90
